test/zinc_source/compile_errors/operators/10_enum_operator.zn
// expected-error: operator declarations must be inside structs

enum Mode {
    On

    fn operator==(left, right) -> bool {
        return true
    }
}

fn main() {
    mode = Mode.On
}
